--- a/visualizations.Rmd
+++ b/visualizations.Rmd
@@ -69,21 +69,24 @@ library(lubridate)
 
 ```{r get historical data, warning = FALSE, message = FALSE}
 
-# full-data
-cbs_data <- read_files('data/')
-data <- sep_departures_from_arrivals(cbs_data) %>%
-    filter(!is.na(station)) # Remove electric bikes not going to / from a station
+# # full-data
+# cbs_data <- read_files('data/')
+# data <- sep_departures_from_arrivals(cbs_data) %>%
+#     filter(!is.na(station)) # Remove electric bikes not going to / from a station
 
 # # partial data
 # cbs_data <- read.csv("data/202109-capitalbikeshare-tripdata.csv")
 # data <- sep_departures_from_arrivals(cbs_data) %>% 
 #   filter(!is.na(station)) # if you want to try first with one data set only to not overload your machine you can use these lines instead of the above
 
-filter_by_distance(data, from_station = 'lincoln_memorial', distance_m = 1600) # added filtering
+# filter_by_distance(data, from_station = 'lincoln_memorial', distance_m = 1600) # added filtering
 
-hour_data <- get_station_hourly(data) %>% 
-  get_historic_weather() %>% # added weather
-  add_sun_is_out() 
+# hour_data <- get_station_hourly(data) %>% 
+#   get_historic_weather() %>% # added weather
+#   add_sun_is_out()
+
+# load generated data
+hour_data <- read_csv("hour_data.csv")
 
 # The grouped data does not have the original date column, but it can be nice for visualizations. There is a function to do this in times.R
 hour_data_date <- add_date_column(hour_data)
