--- a/visualizations.Rmd
+++ b/visualizations.Rmd
@@ -153,25 +153,29 @@ train_data_date %>%
 ```
 
 ## Visualizations by time at Lincoln Memorial
-In this part, we use Lincoln Memorial as an example to show the change in amount of rides over time, by date, weekday, day of month, hour, 
+In this part, we use Lincoln Memorial as an example to show the change in amount of rides over time.
 
 ```{r date}
 train_data_date %>%  # for me here there is a weird gap after July 2020, not sure why?
   ggplot(aes(x = date, y = lincoln_memorial_departures)) +
   geom_point(alpha = 0.1, color = "orange") + 
   geom_smooth() +
-  labs(title = "",
+  labs(title = "January has the least demand of capital bikes",
        x = "Date", 
        y = "The Number of Departures at Lincoln Memorial")
 ```
 
-```{r weekday}
+```{r weekday, warning = FALSE}
 # by weekday
 train_data_date %>% 
   mutate(weekday = wday(date, label=TRUE)) %>% 
   ggplot(aes(x = weekday, y = lincoln_memorial_departures)) +
   geom_point(alpha = 0.1) + # clearly people cycle more on Saturdays and Sundays
-  geom_smooth()
+  geom_smooth() +
+  labs(title = "At Lincoln Memorial, Capitals bikes are mostly used for recreational purpose",
+       subtitle = "Weekend has the highest demand",
+       x = "Weekday", 
+       y = "The Number of Departures at Lincoln Memorial")
 
 # farah's code here although similar to first one here?
 #hour_data_date %>%
@@ -182,12 +186,16 @@ train_data_date %>%
   #theme_minimal()
 ```
 
-```{r day of month}
+```{r day of month, warning = FALSE}
 # by day of the month
 train_data_date %>% 
   ggplot(aes(x = day, y = lincoln_memorial_departures)) +
   geom_point(alpha = 0.1, color = "salmon") + # there is no clear pattern across days of the month - aka probably not a good predictor
-  geom_smooth()
+  geom_smooth() + 
+  facet_wrap(~month, scales = "free_y") +
+  labs(title = "At Lincoln Memorial, demand for bikes is more fluctuated in tourist season",
+       x = "Day of a month", 
+       y = "The Number of Departures at Lincoln Memorial")
 ```
 
 ```{r hour}
