--- a/visualizations.Rmd
+++ b/visualizations.Rmd
@@ -43,6 +43,7 @@ library(tidymodels)
 library(corrplot)
 library(suncalc)
 library(lubridate)
+library(prophet)
 ```
 
 
@@ -117,6 +118,8 @@ train_data_date %>%
     min(lincoln_memorial_departures),
     sd(lincoln_memorial_departures)) 
 # how can we get better summary stats? maybe not split by hour?
+# we can group the data, and sum if we need to
+
 ```
 
 
@@ -265,30 +268,25 @@ train_data_date %>%
 ```
 
 ```{r holidays}
-# prep training data for holiday barchart - 1 year of data from May 2020 to April 2021
-# bar_date <- train_data_date %>%
-#   filter(year==2020 | year==2021 & month== "Jan" | year==2021 & month== "Feb"|year==2021 & month== "Mar"|year==2021 & month== "Apr") %>%
-#   group_by(day, month, year)%>%
-#   summarise(lincoln_memorial_departures=sum(lincoln_memorial_departures), n())
-
+#prep training data for holiday barchart - 1 year of data from May 2020 to April 2021
 bar_date <- train_data_date %>%
-  filter(year==2021 & month== "Jan" & day=="1") %>%
+  filter(year==2020 | year==2021 & month== "Jan" | year==2021 & month== "Feb"|year==2021 & month== "Mar"|year==2021 & month== "Apr") %>%
   group_by(day, month, year)%>%
   summarise(lincoln_memorial_departures=sum(lincoln_memorial_departures), n())
+## confirmed: 365 days exist in this data frame but not everyday has 24 hours because the training data does not have the full data
 
-## confirmed: 365 days exist in this data frame
 # check for missing data
 sum(is.na(bar_date$lincoln_memorial_departures)) #0
 
-# what is the mean ridership per day
+# what is the mean departures per day?
 mean_day <- bar_date %>%
   group_by(day) %>%
   summarize(n= mean(lincoln_memorial_departures)) %>%
-  summarize(mean(n))  ## mean per day is 1279
+  summarize(mean(n))  ## mean per day is 55.6
               
 # create a data frame for holidays
 holidays <- generated_holidays %>%
-  filter(country = "US") 
+  filter(country == "US") 
 
 holidays$ds <- as_date(ymd(holidays$ds)) 
 
@@ -305,13 +303,15 @@ holidays_date <- left_join(bar_date, holidays, by= c('year', 'month', 'day')) %>
 holidays_date %>%
   ggplot(aes(y= holiday, x= lincoln_memorial_departures , fill=lincoln_memorial_departures)) + 
   geom_col()+
-  geom_vline(xintercept = 1279, color="blue")+ ## 1279 is the mean ridership per day
+  geom_vline(xintercept = 55.6, color="black")+ ## 66.6 is the mean ridership per day
   xlab("") +
   ylab("Number of departures") +
-  scale_colour_discrete("Holidays")+
+  scale_fill_gradient2() +
+ #scale_colour_discrete("Holidays")+
+  #scale_fill_manual(c("#FF6666")) +
   labs(title = "", caption = "") +
   guides(fill=guide_legend(title="Number of departures")) +
-  theme_minimal() +
+  #theme_minimal() +
   theme(plot.caption = element_text(face = "italic")
   ) 
 
