--- a/random_forest_final.Rmd
+++ b/random_forest_final.Rmd
@@ -53,22 +53,22 @@ doParallel::registerDoParallel()
 
 ```{r get_data, cache=TRUE, warning=FALSE, message=FALSE}
   
-cbs_data <- read_files('data/')
-data <- sep_departures_from_arrivals(cbs_data) %>%
-  filter(!is.na(station)) # Remove electric bikes not going to / from a station
-
-filtered_data <- filter_by_distance(data, from_station = 'lincoln_memorial', distance_m = 1600)
-
-hour_data <- get_station_hourly(filtered_data) 
-
-hour_data_test <- hour_data %>% 
-  fill_in_missing_rows() %>% 
-  get_historic_weather() %>% 
-  add_sun_is_out()
-
-hour_data <- read_csv('hour_data.csv')
-
-lagged_data <- setup_for_time_prediction(hour_data, station_name = "lincoln_memorial")
+# cbs_data <- read_files('data/')
+# data <- sep_departures_from_arrivals(cbs_data) %>%
+#   filter(!is.na(station)) # Remove electric bikes not going to / from a station
+# 
+# filtered_data <- filter_by_distance(data, from_station = 'lincoln_memorial', distance_m = 1600)
+# 
+# hour_data <- get_station_hourly(filtered_data) 
+# 
+# hour_data_test <- hour_data %>% 
+#   fill_in_missing_rows() %>% 
+#   get_historic_weather() %>% 
+#   add_sun_is_out()
+# 
+# hour_data <- read_csv('hour_data.csv')
+# 
+# lagged_data <- setup_for_time_prediction(hour_data, station_name = "lincoln_memorial")
 
 lagged_data <- read_csv('lagged_data_3200.csv')
 
